--- a/Main/Main.xcodeproj/xcshareddata/xcschemes/Embed and sign.xcscheme
+++ b/Main/Main.xcodeproj/xcshareddata/xcschemes/Embed and sign.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "7DB777FE2A7BA0AD0058BB61"
-               BuildableName = "Main.app"
-               BlueprintName = "Main"
+               BuildableName = "Embed and sign.app"
+               BlueprintName = "Embed and sign"
                ReferencedContainer = "container:Main.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,8 +44,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7DB777FE2A7BA0AD0058BB61"
-            BuildableName = "Main.app"
-            BlueprintName = "Main"
+            BuildableName = "Embed and sign.app"
+            BlueprintName = "Embed and sign"
             ReferencedContainer = "container:Main.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,8 +61,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7DB777FE2A7BA0AD0058BB61"
-            BuildableName = "Main.app"
-            BlueprintName = "Main"
+            BuildableName = "Embed and sign.app"
+            BlueprintName = "Embed and sign"
             ReferencedContainer = "container:Main.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
