--- a/Main/Podfile
+++ b/Main/Podfile
@@ -1,4 +1,11 @@
+# Uncomment the next line to define a global platform for your project
+# platform :ios, '9.0'
+
+
 target 'Local pod' do
+  # Comment the next line if you don't want to use dynamic frameworks
+  use_frameworks!
+  
+  # Pods for Local pod
   pod 'shared', :path => "../multiplatform-lib/shared/shared.podspec"
 end
-
