--- a/Main/Main.xcodeproj/xcshareddata/xcschemes/Local pod.xcscheme
+++ b/Main/Main.xcodeproj/xcshareddata/xcschemes/Local pod.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "7D2BA45A2A7BAB780057CC5A"
-               BuildableName = "Local pod.app"
-               BlueprintName = "Local pod"
+               BuildableName = "Remote pod.app"
+               BlueprintName = "Remote pod"
                ReferencedContainer = "container:Main.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -44,8 +44,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7D2BA45A2A7BAB780057CC5A"
-            BuildableName = "Local pod.app"
-            BlueprintName = "Local pod"
+            BuildableName = "Remote pod.app"
+            BlueprintName = "Remote pod"
             ReferencedContainer = "container:Main.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -61,8 +61,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "7D2BA45A2A7BAB780057CC5A"
-            BuildableName = "Local pod.app"
-            BlueprintName = "Local pod"
+            BuildableName = "Remote pod.app"
+            BlueprintName = "Remote pod"
             ReferencedContainer = "container:Main.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
